restructured code to contain private and public side, also implemented a small example that works

--- a/src/linked_list/CMakeLists.txt
+++ b/src/linked_list/CMakeLists.txt
@@ -3,13 +3,14 @@
 ## cmake for linked list library
 
 # variables
-set(lOOPS "linked_list")
+set(LINKED_LIST "linked_list")
 set(LINKED_LIST_SOURCES
-    "linked_list_functions.c"
-    "linked_list_structs.c"
+    "linked_list_private_functions.c"
+    "linked_list_public_functions.c"
 )
 set(LINKED_LIST_HEADERS
     "${CMAKE_CURRENT_SOURCE_DIR}/../../include/linked_list.h"
+    "${CMAKE_CURRENT_SOURCE_DIR}/linked_list_private.h"
 )
 set(LINKED_LIST_INCLUDES
     "${CMAKE_CURRENT_SOURCE_DIR}/../../include"
