--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,15 +26,15 @@ option(RUN_TESTS "enable tests" OFF)
 # external libraries
 # Test library
 if (RUN_TESTS)
-    include(FetchContent)
-    FetchContent_Declare(
-        googletest
-        URL https://github.com/google/googletest/archive/6ec14dfd8c409d05fba94e18e3a02df35b874353.zip
-        DOWNLOAD_EXTRACT_TIMESTAMP true
-    )
-    # For Windows: Prevent overriding the parent project's compiler/linker settings
-    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-    FetchContent_MakeAvailable(googletest)
+    # include(FetchContent)
+    # FetchContent_Declare(
+    #     googletest
+    #     URL https://github.com/google/googletest/archive/6ec14dfd8c409d05fba94e18e3a02df35b874353.zip
+    #     DOWNLOAD_EXTRACT_TIMESTAMP true
+    # )
+    # # For Windows: Prevent overriding the parent project's compiler/linker settings
+    # set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+    # FetchContent_MakeAvailable(googletest)
 
     enable_testing()
 endif()
